[tool.poetry]
name = "df-py-user-api"
version = "0.0.1"
description = ""
authors = ["sufyanaligit <informsufyan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pydantic = {extras = ["email"], version = "^1.9.2"}
pytest = "^7.1.2"
SQLAlchemy = "^1.4.39"
pytest-bdd = "^6.0.1"
psycopg2-binary = "^2.9.3"
coverage = "^6.4.2"
ipython = "^8.4.0"
requests = "^2.28.1"
uvicorn = "^0.18.2"
SQLAlchemy-Utils = "^0.38.3"
asyncpg = "^0.26.0"
mangum = "^0.15.1"
alembic = "^1.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--ignore iac"
testpaths = [
    "tests"
]

#Run project
[tool.poetry.scripts]
start = "df-py-user-api.src:main"

[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]
exclude = '''
/(
  tables
)/
'''

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''
